examples/invalid/projects/bad_nir_surface_missing_shader_packet/surface_shader.ns
use data FabricPlane;

mod shader SurfaceShader {
  fn profile() {
    const vertex_count: i64 = 4;
    const instance_count: i64 = 1;
    const packet_color_slot: i64 = 0;
    const packet_speed_slot: i64 = 1;
    const packet_radius_slot: i64 = 2;
    const packet_tag: i64 = 17;
    const material_mode: i64 = 2;
    const pass_kind: i64 = 1;
    const packet_field_count: i64 = 3;
    let profile_target: Target = shader_target("rgba8_unorm", 160, 120);
    let profile_view: Viewport = shader_viewport(160, 120);
    let profile_pipe: Pipeline = shader_pipeline("lit_sphere", "triangle_strip");
  }
}
